[package]
name = "lametrobusping"
version = "0.1.0"
edition = "2024"

[lib]
name = "lametrobusping"
path = "src/lib.rs"

[[bin]]
name = "ingester"
path = "src/bin/ingester.rs"

[[bin]]
name = "api"
path = "src/bin/api.rs"

[dependencies]
bincode = "1.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
